static/css/blogr.css
/* ... */
.pagination > li > a,
.pagination > li > a,
.pagination > li > span,
.pagination > li > span {
    /*z-index: 3;*/
    /*color: #23527c;*/
    /*border-color: #ddd;*/
    color: #ccc !important;
    background-color: #1c2024 !important;
    /*background-color: #343a40 !important;*/
}


.pagination {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}


.pagination .page-item:first-child {
    margin-left: auto;
}
.pagination .page-item:last-child {
    margin-right: auto;
}


hr {
    border-top: 1px solid #777;
}



/*
orange:   #de6d11
dark ora: #853c01
*/

.v-am-list {
    list-style-type: none;
    padding-left: 0px;
    padding-right: 0px;
}

.v-am-item-bottom {
    padding-top: 0.4em;
}

.v-am-list li:nth-of-type(odd) {
    background-color: #32383e;
}

.v-am-item {
    background-color: #212529;
    border-left: 3px solid #de6d11;
    border-right: 1px solid #853c01;
    border-bottom: 1px solid #853c01;
    border-top: 1px solid #853c01;
    padding: 0px 9px 0.4em 10px;
    margin-left: 0px;
    margin-right: 0px;
    min-width: 100%;
    margin-bottom: 1.5em;
    border-radius: 1em;
    
}

.v-am-item:hover {
    border-left: 8px solid #de6d11;
    border-right: 5px solid #de6d11;
    border-top: 1px solid #de6d11;
    border-bottom: 1px solid #de6d11;
    padding-left: 5px;
    padding-right: 4px;
}

.v-am-itemlink {
    font-family:  vishusBlogTitle, 'Century Gothic', verdana, 'trebuchet ms', Tahoma, 'sans-serif', times;
    font-size: 110%;
    padding-left: 1em;
    width: 100%;
    padding-top: 0.4rem;
    padding-bottom: .5rem;
    padding-right: 1em;
    margin-left: 10px;
    margin-right: 11px;
    border-radius: 0.5em 0.5em 0px 0px;
    /*border-bottom: 1px dashed #666; */
}

.v-am-itemlink:hover {
    background-color: #de6d11;
}

.v-am-itemlink i {
    color: #fff;
}
.v-am-item-viewlink-a {
    padding-right: 1em;
}

.v-am-item-posted {
    font-size: 90%;
}

.v-am-item-tags {
    margin: .25em 11px -7px 10px;
    /*border-top: 1px dashed #777;*/
    /*padding-top: 0.5em;*/
}

.v-am-item-tag {
    
}

.v-am-divider {
    clear: both;
}
.v-am-item-tag-divider {
    size: 1px;
    border-top: 1px dashed #777;
}

.v-am-divider {
    /* clear: both; */
    width: 100%;
    padding: 0px 11px 0px 10px;
}
.v-am-item-tag-divider {
    size: 1px;
    border-top: 1px solid #666;
    margin: 1.5em 0px 0.5em 0px;
}
hr.v-am-item-tag-divider:after {
    content: "Tags";
    position: relative;
    top: -.8em;
    margin: 0px auto;
    left: 50%;
    /*left: 2em;*/
    /*background-color: #333;*/
    background-color: #212529;
    display: inline-block;
    color: #888;
    padding: 0px 0.2em;
}


.v-am-list li:nth-of-type(odd) hr.v-am-item-tag-divider:after {
    background-color: #32383e;
}



/* Article Has No Description */
.v-am-item-description {
    text-align: center;
    color: #777;
}
/* Article Has A Description */
.v-am-item-description.v-has-desc {
    color: #ddd;
}
.v-am-item-top a {
    color: #e06500;
}
.v-am-item-top a:hover {
    color: #fff;
}

.v-am-item-detele i {
    color: #dc3545;
}




/*.v-am-item-desription .tooltip-inner {
    color: #f00 !important;
}
.v-am-item-desription.v-has-desc .tooltip-inner {
    color: #fff;
}*/

.v-manage {
    background-color: #212529;
    font-size: .9em;
    /*background-color: #32383e;*/
    /*border-collapse: separate !important;*/
    /*border: 1px solid #666;*/
    /*border-radius: 1em;*/
    /*padding: 4px;*/
}

.v-manage tr th, .v-manage tr td {
    /*border-color: #888;*/
    background-color: #212529;
    /*border-color: #999;*/
    border-color: #de6d11;
    border-right: 1px dashed #853c01;
    border-left: 1px dashed #853c01;
    padding: 4px .7em;
}

.v-manage thead tr th:hover, 
.v-manage thead tr td:hover 
{
    background-color: #944300;
    /*background-color: #b50;*/
    /*background-color: #de6d11;*/
    /*background-color: #853c01;*/
}
.v-manage tbody tr th:hover, 
.v-manage tbody tr td:hover 
{
    background-color: #de6d11;
    color: #000;
}

.v-manage tbody tr:nth-of-type(odd) th:hover, 
.v-manage tbody tr:nth-of-type(odd) td:hover 
{
    background-color: #de6d11;
    color: #000;
}

.v-manage tbody tr:last-child th,
.v-manage tbody tr:last-child td {
    border-bottom: 1px solid #de6d11;
}

.v-manage tbody tr:nth-of-type(odd) td,
.v-manage tbody tr:nth-of-type(odd) th {
    background-color: #32383e;
    /*.table-striped tbody tr:nth-of-type(odd)*/
}
.v-manage thead th {
    text-align: center;
    font-weight: 800;
    border-bottom: 1px solid #de6d11;
}

.v-man-editcol {
    border: 0px !important;
    background-color: #212529 !important;
    text-align: right;
    padding-right: 1.5em !important;
    width: 75px;
    /*font-family: 'franklin gothic book', candara, 'segoe ui', calibri, arial, 'sans-serif', times, Geneva, ‘Lucida Sans’, ‘Lucida Grande’, ‘Lucida Sans Unicode’, Verdana;*/
}

.v-man-datecol {
    width: 125px;
}


/*

OLD - OUTDATED PAGINATION STYLES

.v-collate {
    justify-content: center;
}

.v-collate-left {
    text-align: right;
}
.v-collate-right {
    text-align: left;
}

.v-collate-cur {
    display: inline-block;
    font-weight: 700;
    font-size: 110%;
}
.v-collate-prevnext {
    text-align: right;
}
.v-collate-prevnext:first-child {
    text-align: left;
}
*/

.v-pageinfo {
    text-align: center;
}


.v-nav-bar {
    /*background: url('../white-trans-bg.png');*/
    border-bottom: 1px solid rgba(222, 109, 17, 1);
}

.v-nav-bar .blog-logo {
    /*border-right: 1px solid #de6d11;
    padding-right: 20px;
    margin: 10px 10px 20px 0px;*/
}


.v-nav {
    margin-bottom: 1em;
}
.v-nav-item {
    font-size: 1.15em;
}

.v-form-label {
    /*width: 100%;*/
}
.v-form-control {
    /*width: 100%;*/
}
/* ... */

